feat(eventCard): design eventCard

--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -206,6 +206,7 @@ $transition-timing-linear: linear;
 $breakpoint-xs: 475px;
 $breakpoint-sm: 640px;
 $breakpoint-md: 768px;
+$breakpoint-mobile: 800px;
 $breakpoint-lg: 1024px;
 $breakpoint-xl: 1280px;
 $breakpoint-2xl: 1536px;
