refactor(hero-layout): improve hero design

--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -212,6 +212,11 @@ $breakpoint-xl: 1280px;
 $breakpoint-2xl: 1536px;
 
 // -----------------------------------------------------------------------------
+// Layout
+// -----------------------------------------------------------------------------
+$app-max-width: 1920px;
+
+// -----------------------------------------------------------------------------
 // Z-Index Scale
 // -----------------------------------------------------------------------------
 $z-index-dropdown: 1000;
