refactor(auth): clean code

--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -62,7 +62,7 @@ $color-gray-900: #111827;
 $color-background: $color-white;
 $color-background-soft: #f8f8f8;
 $color-background-mute: #f2f2f2;
-$color-background-dark: #181818;
+$color-background-dark: #1d1d1d;//#181818;
 
 // -----------------------------------------------------------------------------
 // Colors - Text
