refactor(AuthRequiredDialog): use common styles and extract button components

--- a/services/frontend/src/assets/styles/abstracts/_mixins.scss
+++ b/services/frontend/src/assets/styles/abstracts/_mixins.scss
@@ -126,6 +126,14 @@
   left: 0;
 }
 
+@mixin fixed-fill {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 // -----------------------------------------------------------------------------
 // Visual Effects
 // -----------------------------------------------------------------------------
