refactor(Footer): use common styles

--- a/services/frontend/src/assets/styles/abstracts/_mixins.scss
+++ b/services/frontend/src/assets/styles/abstracts/_mixins.scss
@@ -66,6 +66,13 @@
   justify-content: center;
 }
 
+@mixin flex-wrap-center {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 // -----------------------------------------------------------------------------
 // Typography
 // -----------------------------------------------------------------------------
