--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -63,6 +63,7 @@ $color-background: $color-white;
 $color-background-soft: #f8f8f8;
 $color-background-mute: #f2f2f2;
 $color-background-dark: #1d1d1d;//#181818;
+$color-background-dark-soft: #1a1a1a;
 $color-background-overlay: rgba(0, 0, 0, 0.5);
 
 // -----------------------------------------------------------------------------
