refactor(NavigationBar): extract drawerMenu component

--- a/services/frontend/src/assets/styles/abstracts/_mixins.scss
+++ b/services/frontend/src/assets/styles/abstracts/_mixins.scss
@@ -73,6 +73,10 @@
   justify-content: center;
 }
 
+@mixin flex-end {
+  display: flex;
+  justify-content: flex-end;
+}
 // -----------------------------------------------------------------------------
 // Typography
 // -----------------------------------------------------------------------------
