--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -55,6 +55,7 @@ $color-gray-600: #4b5563;
 $color-gray-700: #374151;
 $color-gray-800: #1f2937;
 $color-gray-900: #111827;
+$color-gray-hover: #3a3a3a;
 
 // -----------------------------------------------------------------------------
 // Colors - Backgrounds
