refactor(formField): update validation handling

--- a/services/frontend/src/assets/styles/quasar-variables.scss
+++ b/services/frontend/src/assets/styles/quasar-variables.scss
@@ -20,7 +20,7 @@ $warning: $color-warning;
 // -----------------------------------------------------------------------------
 // Quasar Dark Mode Colors
 // -----------------------------------------------------------------------------
-$dark: $color-gray-900;
+$dark: $color-background-dark;
 $dark-page: $color-background-dark;
 
 // -----------------------------------------------------------------------------
