--- a/services/frontend/src/assets/styles/abstracts/_mixins.scss
+++ b/services/frontend/src/assets/styles/abstracts/_mixins.scss
@@ -131,18 +131,20 @@
 
 @mixin absolute-fill {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 @mixin fixed-fill {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 // -----------------------------------------------------------------------------
