--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -219,6 +219,7 @@ $breakpoint-2xl: 1536px;
 // -----------------------------------------------------------------------------
 $app-max-width: 1920px;
 $app-min-width: 300px;
+$modal-max-width: 400px;
 
 // -----------------------------------------------------------------------------
 // Z-Index Scale
