--- a/services/frontend/src/assets/styles/abstracts/_mixins.scss
+++ b/services/frontend/src/assets/styles/abstracts/_mixins.scss
@@ -131,20 +131,18 @@
 
 @mixin absolute-fill {
   position: absolute;
-  border-radius: 0;
-  width: 100%;
-  height: 100%;
-  max-width: 100vw;
-  max-height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0
 }
 
 @mixin fixed-fill {
   position: fixed;
-  border-radius: 0;
-  width: 100%;
-  height: 100%;
-  max-width: 100vw;
-  max-height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 // -----------------------------------------------------------------------------
