--- a/services/frontend/src/assets/styles/main.scss
+++ b/services/frontend/src/assets/styles/main.scss
@@ -16,7 +16,7 @@
 // 3. Components - Reusable Component Styles
 // -----------------------------------------------------------------------------
 // Import component styles here as you create them
-// @import 'components/buttons';
+@use 'components/buttons';
 // @import 'components/cards';
 // @import 'components/forms';
 
