chore(createEvent): improve error handling and i18n

--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -5,9 +5,9 @@
 // -----------------------------------------------------------------------------
 // Colors - Primary & Brand
 // -----------------------------------------------------------------------------
-$color-primary: #6F00FF;
-$color-primary-dark: #6F00FF;
-$color-primary-light: #6F00FF;
+$color-primary: #f28d09;
+$color-primary-dark: #c85c1d;
+$color-primary-light: #f8ba34;
 
 $color-secondary: #8b5cf6;
 $color-secondary-dark: #7c3aed;
