--- a/services/frontend/src/assets/styles/abstracts/_variables.scss
+++ b/services/frontend/src/assets/styles/abstracts/_variables.scss
@@ -5,9 +5,16 @@
 // -----------------------------------------------------------------------------
 // Colors - Primary & Brand
 // -----------------------------------------------------------------------------
-$color-primary: #f28d09;
-$color-primary-dark: #c85c1d;
-$color-primary-light: #f8ba34;
+// $color-primary:       #6366F1;
+// $color-primary-dark:  #4338CA;
+// $color-primary-light: #A5B4FC;
+
+// $color-primary:       #9333EA;
+// $color-primary-dark:  #7E22CE;
+// $color-primary-light: #E9D5FF;
+$color-primary:       #7100FF;  
+$color-primary-dark:  #4B00B5;
+$color-primary-light: #C9B3FF; 
 
 $color-secondary: #8b5cf6;
 $color-secondary-dark: #7c3aed;
